# wcag_low_vision_audit

./: .gitignore  README.md  pyproject.toml
examples/: README.md
src/lvaudit/: __init__.py  capture.py  cli.py  detectors.py  models.py
tests/: test_detectors.py
