[project]
name = "lvaudit"
version = "0.1.0"
description = "Low-Vision Layout Auditor — finds layout failures real low-vision users hit, that automated scanners miss."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fernando", email = "fermavec@gmail.com" }]
dependencies = [
    "playwright>=1.44",
    "pillow>=10.0",
    "numpy>=1.24",
    "jinja2>=3.1",
]

[project.scripts]
lvaudit = "lvaudit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
